# chimahon-local-ocr

./: .gitignore  build.gradle.kts
src/main/cpp/: CMakeLists.txt  lens_asset_init.cpp
src/main/java/chimahon/local/ocr/: LensEngine.kt  LensResponseParser.kt
src/main/java/com/google/android/libraries/lens/ondevice/nativeapi/: LodeSplitRegistry.java  OnDeviceEngineNativeApi.java
